--- a/plc.html
+++ b/plc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>PLC Interconnection Viewer</title>
+<title>PLC Address Viewer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -10,33 +10,71 @@
 body{
   font-family: Arial, sans-serif;
   margin:0;
-  padding:20px;
   background:#f4f7ff;
 }
 
-.header{
+/* ===== TOP CREDIT ===== */
+.top-credit{
+  text-align:center;
+  padding:10px;
+  font-size:13px;
   background:#1f3c88;
   color:#fff;
-  padding:15px;
-  border-radius:6px;
-  margin-bottom:20px;
+  letter-spacing:0.5px;
+}
+
+/* ===== HEADER ===== */
+.header{
+  text-align:center;
+  padding:20px 10px;
 }
 
 .header h2{
   margin:0;
-  font-size:20px;
+  font-size:22px;
+  font-weight:bold;
 }
 
 .updated{
-  font-size:12px;
-  opacity:0.8;
-  margin-top:5px;
+  margin-top:6px;
+  font-size:13px;
+  color:#555;
+}
+
+/* ===== BUTTON AREA ===== */
+.button-bar{
+  display:flex;
+  justify-content:center;
+  gap:15px;
+  margin-bottom:20px;
+  flex-wrap:wrap;
+}
+
+.button-bar button{
+  padding:8px 16px;
+  border:none;
+  border-radius:4px;
+  cursor:pointer;
+  font-size:13px;
+  background:#1f3c88;
+  color:white;
+}
+
+.button-bar button:hover{
+  background:#162d66;
+}
+
+/* ===== CONTENT ===== */
+.container{
+  padding:0 20px 30px 20px;
+  max-width:1200px;
+  margin:auto;
 }
 
 .section-title{
   font-weight:bold;
   margin:20px 0 10px;
-  padding:6px;
+  padding:8px;
   background:#e8edff;
   border-left:4px solid #1f3c88;
 }
@@ -46,12 +84,12 @@ table{
   width:100%;
   background:#fff;
   margin-bottom:25px;
+  font-size:13px;
 }
 
 th, td{
   border:1px solid #ccc;
   padding:6px;
-  font-size:13px;
   text-align:left;
 }
 
@@ -64,15 +102,33 @@ tr:hover{
 }
 
 .no-data{
-  background:#fff;
-  padding:15px;
-  border-radius:6px;
+  text-align:center;
   color:red;
   font-weight:bold;
+  padding:20px;
 }
 
 .loader{
+  text-align:center;
+  padding:40px;
   font-weight:bold;
+}
+
+/* ===== MOBILE RESPONSIVE ===== */
+@media(max-width:768px){
+
+  table{
+    font-size:11px;
+  }
+
+  th, td{
+    padding:4px;
+  }
+
+  .header h2{
+    font-size:18px;
+  }
+
 }
 
 </style>
@@ -80,22 +136,40 @@ tr:hover{
 
 <body>
 
-<div id="app">
-  <div class="loader">Loading PLC data...</div>
+<div class="top-credit">
+  Designed and Maintained by RAKESH CHANDRA SETHY
+</div>
+
+<div class="container">
+
+  <div id="app">
+    <div class="loader">Loading PLC data...</div>
+  </div>
+
 </div>
 
 <script>
 
-const JSON_URL = 
+const JSON_URL =
 "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/plc/plc.json";
 
-// Get ID from URL
+// Get Drive ID
 function getDriveFromURL(){
   const params = new URLSearchParams(window.location.search);
   return params.get("id");
 }
 
-// Create table function
+// Back Button
+function goBack(){
+  window.history.back();
+}
+
+// Home Button
+function goHome(){
+  window.location.href = "index.html"; // change if needed
+}
+
+// Create Table
 function createTable(title, dataArray){
 
   let html = `
@@ -129,15 +203,12 @@ function createTable(title, dataArray){
     `;
   });
 
-  html += `
-      </tbody>
-    </table>
-  `;
+  html += `</tbody></table>`;
 
   return html;
 }
 
-// Main loader
+// Main Loader
 async function loadPLC(){
 
   const app = document.getElementById("app");
@@ -166,8 +237,15 @@ async function loadPLC(){
 
     let html = `
       <div class="header">
-        <h2>PLC INTERCONNECTION — ${driveID}</h2>
-        <div class="updated">Last Updated: ${new Date(data.updated).toLocaleString()}</div>
+        <h2>PLC ADDRESS OF DRIVE — ${driveID}</h2>
+        <div class="updated">
+          Last Updated: ${new Date(data.updated).toLocaleString("en-GB")}
+        </div>
+      </div>
+
+      <div class="button-bar">
+        <button onclick="goBack()">⬅ Back</button>
+        <button onclick="goHome()">🏠 Home</button>
       </div>
     `;
 
