--- a/plc.html
+++ b/plc.html
@@ -166,8 +166,9 @@ function goBack(){
 
 // Home Button
 function goHome(){
-  window.location.href = "index.html"; // change if needed
+  window.location.href = "https://08electricaldata.github.io/";
 }
+
 
 // Create Table
 function createTable(title, dataArray){
