--- a/drive.html
+++ b/drive.html
@@ -2,335 +2,555 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Unified Drive Viewer</title>
+<title>Drive Viewer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{font-family:Arial;margin:0;background:#f4f7ff}
+body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 
-/* TOP */
-.top-credit{
-  text-align:center;
-  padding:10px;
-  background:#1f3c88;
-  color:#fff;
-  font-size:13px;
+/* ===== HEADER BAR (SAME AS INDEX) ===== */
+.header-bar {
+  position: sticky; top: 0; z-index: 1000;
+  background: #f2f6ff; padding: 10px 12px;
+  display: flex; align-items: center; gap: 10px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
 
-.header{
-  text-align:center;
-  padding:20px 10px;
+.header-title { flex: 1; text-align: center; }
+.header-title h2 { margin: 0; color: #003f88; }
+.header-title small { display: block; font-size: 15px; font-weight: 600; }
+
+.icon-btn {
+  background: #ffffff;
+  color: #003f88;
+  border: 1px solid #003f88;
+  border-radius: 8px;
+  padding: 10px 12px;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-.header h2{margin:0}
+.container { padding: 20px; }
 
-/* NAV */
-.nav-bar{
-  display:flex;
-  justify-content:center;
-  gap:10px;
-  flex-wrap:wrap;
+.card {
+  background: #fff; padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.15);
   margin-bottom:20px;
 }
 
-.nav-btn{
-  padding:8px 16px;
-  border:none;
-  background:#003f88;
-  color:white;
-  border-radius:6px;
-  cursor:pointer;
-  position:relative;
-  transition:0.3s;
+.label { font-weight: bold; color: #003f88; }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
 }
 
-.nav-btn.active{
-  background:#ff9800;
-}
-
-.badge{
-  position:absolute;
-  top:-6px;
-  right:-6px;
-  background:red;
-  color:white;
-  font-size:11px;
-  padding:2px 6px;
-  border-radius:50%;
-}
-
-.indicator{
-  width:8px;
-  height:8px;
-  background:#4caf50;
-  border-radius:50%;
-  display:inline-block;
-  margin-left:6px;
-}
-
-/* CONTENT */
-.container{
-  max-width:1200px;
-  margin:auto;
-  padding:0 20px 40px;
-}
-
-.card{
-  background:white;
-  padding:20px;
-  border-radius:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,.15);
-  opacity:0;
-  transform:translateY(10px);
-  transition:.3s;
-}
-
-.card.show{
-  opacity:1;
-  transform:translateY(0);
-}
-
-.section-title{
+/* ===== ACTION BUTTONS ===== */
+.action-row {
+  display:flex;
+  flex-wrap:wrap;
+  gap:12px;
   margin-top:20px;
-  font-weight:bold;
-  color:#003f88;
 }
 
-table{
-  width:100%;
-  border-collapse:collapse;
+.action-btn {
+  padding: 10px 18px;
+  background: #003f88;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.action-btn:disabled {
+  background:#ccc;
+  cursor:not-allowed;
+}
+
+.badge {
+  color:red;
+  font-weight:bold;
   margin-top:10px;
 }
 
-th,td{
-  border:1px solid #ccc;
-  padding:6px;
+/* ===== PLC TABLE STYLE ===== */
+.section-title{
+  font-weight:bold;
+  margin:20px 0 10px;
+  padding:8px;
+  background:#e8edff;
+  border-left:4px solid #003f88;
+}
+
+table{
+  border-collapse:collapse;
+  width:100%;
+  background:#fff;
   font-size:13px;
 }
 
-th{background:#e6ecff}
-
-/* PRINT */
-@media print{
-  .nav-bar{display:none}
-  body{background:white}
+th, td{
+  border:1px solid #ccc;
+  padding:6px;
+  text-align:left;
 }
 
-.no-data{
-  text-align:center;
-  color:red;
+th{
+  background:#dbe4ff;
+}
+
+/* ===== DRAWING GRID ===== */
+.group-title{
+  margin-top:25px;
   font-weight:bold;
+  color:#003f88;
+  font-size:18px;
+  border-bottom:2px solid #003f88;
+  padding-bottom:5px
 }
 
+.draw-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+  gap:18px;
+  margin-top:15px
+}
+
+.tile{
+  background:#f8fbff;
+  padding:12px;
+  border-radius:10px;
+  box-shadow:0 2px 5px rgba(0,0,0,.1);
+  cursor:pointer;
+  text-align:center;
+  transition:.2s
+}
+.tile:hover{transform:scale(1.03)}
+
+.tile img{
+  width:100%;
+  height:150px;
+  object-fit:cover;
+  border-radius:8px;
+  margin-bottom:8px
+}
+
+.viewer{
+  margin-top:30px;
+  height:650px;
+  border:1px solid #ccc;
+  border-radius:10px;
+  overflow:hidden;
+  display:none;
+}
+
+.viewer iframe{
+  width:100%;
+  height:100%;
+  border:none
+}
+
+.hidden{display:none}
+
+@media(max-width:768px){
+  .grid { grid-template-columns: 1fr; }
+  .viewer{height:450px}
+}
 </style>
 </head>
+
 <body>
 
-<div class="top-credit">
-Designed and Maintained by RAKESH CHANDRA SETHY
-</div>
+<div class="header-bar">
+  <button class="icon-btn" onclick="goHome()">🏠</button>
+  <button class="icon-btn" onclick="goBack()">⬅</button>
+  <button class="icon-btn" onclick="addJob()">➕</button>
 
-<div class="header">
-  <h2 id="driveTitle">Loading...</h2>
-</div>
-
-<div class="nav-bar">
-  <button class="nav-btn" id="btn-info" onclick="showTab('info')">ℹ️ Info</button>
-  <button class="nav-btn" id="btn-plc" onclick="showTab('plc')">
-    ⚡ PLC <span id="plcIndicator"></span>
-  </button>
-  <button class="nav-btn" id="btn-drawing" onclick="showTab('drawing')">
-    📐 Drawings <span id="drawBadge"></span>
-  </button>
-  <button class="nav-btn" id="btn-history" onclick="showTab('history')">📜 History</button>
-  <button class="nav-btn" onclick="printReport()">🖨 Print</button>
+  <div class="header-title">
+    <h2 id="pageTitle">Drive Viewer</h2>
+    <small>Designed and maintained by Rakesh Chandra Sethy</small>
+  </div>
 </div>
 
 <div class="container">
-  <div id="content" class="card">Loading...</div>
+
+  <!-- ===== INFO SECTION ===== -->
+  <div id="infoSection" class="card"></div>
+
+  <!-- ===== PLC SECTION ===== -->
+  <div id="plcSection" class="card hidden"></div>
+
+  <!-- ===== DRAWING SECTION ===== -->
+  <div id="drawingSection" class="card hidden"></div>
+
+  <!-- ===== HISTORY SECTION (PART 2) ===== -->
+  <div id="historySection" class="card hidden"></div>
+
 </div>
 
 <script>
 
-const DRIVE_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
-const PLC_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/plc/plc.json";
-const DRAWING_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drawings/drawings.json";
-const HISTORY_BASE="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
-const YEARS=[2026,2025,2024,2023,2022,2021,2020,2019];
+/* ===== JSON URLS ===== */
+const DRIVE_JSON =
+"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
 
-let DRIVE_ID="";
-let driveData=null;
-let plcData=null;
-let drawingData=null;
+const PLC_JSON =
+"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/plc/plc.json";
 
-function normalize(v){return String(v||"").toUpperCase().trim();}
-function getID(){return normalize(new URLSearchParams(location.search).get("id"));}
+const DRAWING_JSON =
+"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drawings/drawings.json";
 
-function animate(){
-  content.classList.remove("show");
-  setTimeout(()=>content.classList.add("show"),50);
+/* ===== UTIL ===== */
+function normalize(v){
+  return String(v||"")
+    .replace(/[–—?]/g,"-")
+    .toUpperCase()
+    .trim();
 }
 
-function showTab(tab){
-
-  document.querySelectorAll(".nav-btn").forEach(b=>b.classList.remove("active"));
-  document.getElementById("btn-"+tab)?.classList.add("active");
-
-  if(tab==="info") renderInfo();
-  if(tab==="plc") renderPLC();
-  if(tab==="drawing") renderDrawing();
-  if(tab==="history") renderHistory();
-
-  animate();
+function getID(){
+  return normalize(new URLSearchParams(location.search).get("id"));
 }
 
-/* ========= INFO ========= */
-function renderInfo(){
-  if(!driveData){
-    content.innerHTML="<div class='no-data'>No Drive Data</div>";
+function goHome(){ location.href="https://08electricaldata.github.io/"; }
+function goBack(){ history.back(); }
+function addJob(){
+  const id=getID();
+  location.href=
+  "https://08electricaldata.github.io/qrsubmit.html?id="+encodeURIComponent(id);
+}
+
+/* ===== TAB SWITCH ===== */
+function showSection(section){
+  infoSection.classList.add("hidden");
+  plcSection.classList.add("hidden");
+  drawingSection.classList.add("hidden");
+  historySection.classList.add("hidden");
+
+  document.getElementById(section).classList.remove("hidden");
+}
+
+/* ===== LOAD INFO ===== */
+async function loadInfo(id){
+
+  const j = await (await fetch(DRIVE_JSON)).json();
+  const c = j.rows.find(r=>normalize(`${r[1]}-${r[2]}`)===id);
+
+  if(!c){
+    infoSection.innerHTML="Drive not found.";
     return;
   }
 
-  content.innerHTML=`
-  <h3>${driveData[1]} – ${driveData[2]}</h3>
-  <p><b>Rating:</b> ${driveData[5]||""}</p>
-  <p><b>FLC:</b> ${driveData[10]||""}</p>
+  pageTitle.innerText=`${c[1]} – ${c[2]}`;
+
+  infoSection.innerHTML=`
+    <h3>${c[1]} – ${c[2]}</h3>
+    <div class="grid">
+      <p><span class="label">Rating:</span> ${c[5]}</p>
+      <p><span class="label">FLC:</span> ${c[10]}</p>
+      <p><span class="label">SFU:</span> ${c[14]}</p>
+      <p><span class="label">Fuse:</span> ${c[15]}</p>
+      <p><span class="label">Contactor:</span> ${c[16]}</p>
+      <p><span class="label">Relay/VFD:</span> ${c[17]}</p>
+    </div>
+
+    <div class="action-row">
+      <button class="action-btn" onclick="showSection('plcSection')">⚡ PLC</button>
+      <button class="action-btn" onclick="showSection('drawingSection')">📐 Drawings</button>
+      <button class="action-btn" onclick="showSection('historySection')">📜 History</button>
+    </div>
   `;
 }
 
-/* ========= PLC ========= */
-function renderPLC(){
-  if(!plcData?.drives?.[DRIVE_ID]){
-    content.innerHTML="<div class='no-data'>No PLC Data</div>";
+/* ===== LOAD PLC ===== */
+async function loadPLC(id){
+
+  const j = await (await fetch(PLC_JSON)).json();
+  const drive = j.drives[id];
+
+  if(!drive){
+    plcSection.innerHTML="<div class='badge'>⚡ No PLC Address Available</div>";
     return;
   }
 
-  const drive=plcData.drives[DRIVE_ID];
   let html="";
+
+  function buildTable(arr){
+    let h=`<table><tr>
+    <th>Signal</th><th>Tag</th><th>Address</th>
+    <th>Description</th><th>Panel</th><th>TB No</th><th>RL</th>
+    </tr>`;
+    arr.forEach(r=>{
+      h+=`<tr>
+      <td>${r.signal||""}</td>
+      <td>${r.tag||""}</td>
+      <td>${r.address||""}</td>
+      <td>${r.description||""}</td>
+      <td>${r.panel||""}</td>
+      <td>${r.tb||""}</td>
+      <td>${r.rl||""}</td>
+      </tr>`;
+    });
+    return h+"</table>";
+  }
 
   if(drive.inputs?.length){
-    html+=`<div class="section-title">INPUTS</div>`+buildTable(drive.inputs);
-  }
-  if(drive.outputs?.length){
-    html+=`<div class="section-title">OUTPUTS</div>`+buildTable(drive.outputs);
+    html+=`<div class="section-title">INPUT SIGNALS</div>`+
+    buildTable(drive.inputs);
   }
 
-  content.innerHTML=html;
+  if(drive.outputs?.length){
+    html+=`<div class="section-title">OUTPUT SIGNALS</div>`+
+    buildTable(drive.outputs);
+  }
+
+  plcSection.innerHTML=html;
 }
 
-/* ========= DRAWING ========= */
-function renderDrawing(){
-  const item=drawingData?.rows?.find(r=>normalize(r.id)===DRIVE_ID);
+/* ===== LOAD DRAWINGS ===== */
+async function loadDrawings(id){
+
+  const j = await (await fetch(DRAWING_JSON)).json();
+  const item = j.rows.find(r=>normalize(r.id)===id);
+
   if(!item){
-    content.innerHTML="<div class='no-data'>No Drawings Available</div>";
+    drawingSection.innerHTML="<div class='badge'>🎨 No Drawings Available</div>";
     return;
   }
 
-  let html="";
-  Object.keys(item).forEach(k=>{
-    if(k==="id"||!Array.isArray(item[k])) return;
-    html+=`<div class="section-title">${k}</div>`;
-    item[k].forEach((link,i)=>{
-      html+=`<p><a href="${link}" target="_blank">Drawing ${i+1}</a></p>`;
+  let html=`<h3>${id}</h3>`;
+
+  Object.keys(item).forEach(group=>{
+    if(group==="id") return;
+    if(!Array.isArray(item[group])) return;
+
+    html+=`<div class="group-title">${group.toUpperCase()}</div>
+           <div class="draw-grid">`;
+
+    item[group].forEach((link,i)=>{
+      if(!link) return;
+
+      html+=`
+      <div class="tile"
+        onclick="openDrawing('${link}')">
+        <img src="https://drive.google.com/thumbnail?id=${link.match(/[-\w]{25,}/)}">
+        <h4>Drawing ${i+1}</h4>
+      </div>`;
     });
+
+    html+=`</div>`;
   });
 
-  content.innerHTML=html;
+  html+=`
+    <div class="viewer" id="viewerBox">
+      <iframe id="pdfFrame"></iframe>
+    </div>
+  `;
+
+  drawingSection.innerHTML=html;
 }
 
-/* ========= HISTORY ========= */
-async function renderHistory(){
-
-  let yearSelect=`<select onchange="filterHistory(this.value)">
-  <option value="ALL">All Years</option>
-  ${YEARS.map(y=>`<option value="${y}">${y}</option>`).join("")}
-  </select>`;
-
-  content.innerHTML=yearSelect+`<div id="historyBox"></div>`;
-
-  filterHistory("ALL");
+function openDrawing(link){
+  const id=link.match(/[-\w]{25,}/);
+  pdfFrame.src="https://drive.google.com/file/d/"+id+"/preview";
+  viewerBox.style.display="block";
 }
 
-async function filterHistory(year){
+/* ===== INIT ===== */
+(async function(){
+  const id=getID();
+  if(!id) return;
 
-  let html="";
+  await loadInfo(id);
+  await loadPLC(id);
+  await loadDrawings(id);
+})();
+  
+/* =========================
+   ===== HISTORY SYSTEM =====
+   ========================= */
 
-  const yearsToLoad = year==="ALL"?YEARS:[year];
+const JOBBOOK_JSON =
+"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/jobbook.json";
 
-  for(const y of yearsToLoad){
+const HISTORY_YEARS = [2026,2025,2024,2023,2022,2021,2020,2019];
+
+const HISTORY_BASE =
+"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
+
+let jobBookMap = {};
+
+/* ===== DATE NORMALIZER ===== */
+function normalizeDateKey(v){
+  if(!v) return "";
+  if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)) return v;
+
+  if(typeof v==="string" && v.startsWith("Date(")){
+    const p=v.match(/\d+/g);
+    const d=new Date(p[0],p[1],p[2]);
+    return `${String(d.getDate()).padStart(2,"0")}/${String(d.getMonth()+1).padStart(2,"0")}/${d.getFullYear()}`;
+  }
+
+  const d=new Date(v);
+  if(!isNaN(d)){
+    return `${String(d.getDate()).padStart(2,"0")}/${String(d.getMonth()+1).padStart(2,"0")}/${d.getFullYear()}`;
+  }
+
+  return "";
+}
+
+function formatDate(v){
+  const key=normalizeDateKey(v);
+  if(!key) return "";
+  const[d,m,y]=key.split("/");
+  return `${d}-${m}-${y}`;
+}
+
+/* ===== LOAD JOBBOOK ===== */
+async function loadJobBook(){
+  try{
+    const r = await fetch(JOBBOOK_JSON);
+    const j = await r.json();
+
+    j.rows.forEach(r=>{
+      const key = normalizeDateKey(r[0]);
+      if(key && r[1]) jobBookMap[key] = r[1];
+    });
+
+  }catch(e){}
+}
+
+/* ===== LOAD HISTORY ===== */
+async function loadHistory(id){
+
+  let all = [];
+
+  for(const y of HISTORY_YEARS){
     try{
-      const j=await (await fetch(HISTORY_BASE+y+".json")).json();
-      const rows=j.rows.filter(r=>normalize(`${r[2]}-${r[3]}`)===DRIVE_ID);
-      if(rows.length){
-        html+=`<div class="section-title">${y}</div>`;
-        rows.forEach(r=>{
-          html+=`<p>${r[4]} - ${r[7]}</p>`;
-        });
-      }
+      const r = await fetch(HISTORY_BASE+y+".json");
+      if(!r.ok) continue;
+
+      const j = await r.json();
+
+      j.rows.forEach(row=>{
+        if(normalize(`${row[2]}-${row[3]}`) === id){
+          all.push(row);
+        }
+      });
+
     }catch(e){}
   }
 
-  document.getElementById("historyBox").innerHTML=
-  html||"<div class='no-data'>No History</div>";
+  all.sort((a,b)=>new Date(b[4])-new Date(a[4]));
+
+  renderHistoryTable(all);
 }
 
-function buildTable(arr){
-  let h=`<table><tr>
-  <th>Signal</th><th>Tag</th><th>Address</th>
-  <th>Description</th><th>Panel</th><th>TB</th><th>RL</th>
-  </tr>`;
-  arr.forEach(r=>{
-    h+=`<tr>
-    <td>${r.signal||""}</td>
-    <td>${r.tag||""}</td>
-    <td>${r.address||""}</td>
-    <td>${r.description||""}</td>
-    <td>${r.panel||""}</td>
-    <td>${r.tb||""}</td>
-    <td>${r.rl||""}</td>
-    </tr>`;
+/* ===== RENDER HISTORY ===== */
+function renderHistoryTable(rows){
+
+  let html = `
+  <h2 style="text-align:center;color:#003f88;">Drive History</h2>
+
+  <div class="controls">
+    <input id="searchBox" placeholder="Search…">
+    <button onclick="exportExcel()">Export Excel</button>
+    <button onclick="window.print()">Export PDF</button>
+  </div>
+
+  <table id="historyTable">
+    <thead>
+      <tr>
+        <th>TR NO</th>
+        <th>MONTH</th>
+        <th>DATE</th>
+        <th>DETAILS OF JOB</th>
+        <th>JOB TYPE</th>
+        <th>JOB CATEGORY</th>
+        <th>CARRIED OUT BY</th>
+        <th>LINK</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  `;
+
+  historySection.innerHTML = html;
+
+  const tbody = historySection.querySelector("tbody");
+
+  let currentYear = "";
+
+  rows.forEach(r=>{
+
+    const key = normalizeDateKey(r[4]);
+    const year = key.slice(-4);
+
+    if(year !== currentYear){
+      currentYear = year;
+      const yr = document.createElement("tr");
+      yr.className = "year-row";
+      yr.innerHTML = `<td colspan="8" style="background:#e8f0ff;color:#003f88;font-weight:700;text-align:center;">YEAR ${year}</td>`;
+      tbody.appendChild(yr);
+    }
+
+    const link = jobBookMap[key] || r[10];
+
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${r[0]||""}</td>
+      <td>${r[1]||""}</td>
+      <td>${formatDate(r[4])}</td>
+      <td>${r[5]||""}</td>
+      <td>${r[6]||""}</td>
+      <td>${r[7]||""}</td>
+      <td>${r[9]||""}</td>
+      <td>${link?`<a href="${link}" target="_blank">Open</a>`:""}</td>
+    `;
+    tbody.appendChild(tr);
   });
-  return h+"</table>";
+
+  if(!rows.length){
+    tbody.innerHTML = `<tr><td colspan="8" style="text-align:center;">No history found</td></tr>`;
+  }
+
+  /* ===== SEARCH FILTER ===== */
+  document.getElementById("searchBox").addEventListener("input",function(){
+    const v = this.value.toLowerCase();
+    historySection.querySelectorAll("tbody tr").forEach(tr=>{
+      tr.style.display = tr.innerText.toLowerCase().includes(v) ? "" : "none";
+    });
+  });
+
 }
 
-function printReport(){
-  window.print();
+/* ===== EXPORT EXCEL ===== */
+function exportExcel(){
+  let csv=[];
+  historySection.querySelectorAll("table tr").forEach(r=>{
+    csv.push([...r.children].map(c=>`"${c.innerText}"`).join(","));
+  });
+
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(new Blob([csv.join("\n")]));
+  a.download="drive-history.csv";
+  a.click();
 }
 
-/* ========= INIT ========= */
+/* ===== MODIFY INIT TO LOAD HISTORY ===== */
 (async function(){
 
-  DRIVE_ID=getID();
-  driveTitle.innerText="Drive — "+DRIVE_ID;
+  const id = getID();
+  if(!id) return;
 
-  const dj=await (await fetch(DRIVE_JSON)).json();
-  driveData=dj.rows.find(r=>normalize(`${r[1]}-${r[2]}`)===DRIVE_ID);
-
-  plcData=await (await fetch(PLC_JSON)).json();
-  drawingData=await (await fetch(DRAWING_JSON)).json();
-
-  /* Green PLC indicator */
-  if(plcData?.drives?.[DRIVE_ID]){
-    document.getElementById("plcIndicator").className="indicator";
-  }
-
-  /* Drawing badge count */
-  const item=drawingData?.rows?.find(r=>normalize(r.id)===DRIVE_ID);
-  if(item){
-    let count=0;
-    Object.keys(item).forEach(k=>{
-      if(k==="id") return;
-      if(Array.isArray(item[k])) count+=item[k].filter(l=>l).length;
-    });
-    if(count>0){
-      document.getElementById("drawBadge").innerHTML=
-      `<span class="badge">${count}</span>`;
-    }
-  }
-
-  showTab("info");
+  await loadJobBook();
+  await loadHistory(id);
 
 })();
+
 </script>
 
 </body>
