--- a/index2.html
+++ b/index2.html
@@ -100,86 +100,96 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 </div>
 
 <script>
-const DRIVE_JSON =
-"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
+/* ================= ULTRA FAST CACHE ================= */
 
-const DRAWING_JSON =
-"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drawings/drawings.json";
+const CACHE = {
+  drive: null,
+  plc: null,
+  drawings: null,
+  history: {}
+};
 
-const PLC_JSON =
-"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/plc/plc.json";
+function fetchCached(url, key){
+  if(CACHE[key]) return Promise.resolve(CACHE[key]);
+  return fetch(url)
+    .then(r=>r.json())
+    .then(j=>{
+      CACHE[key]=j;
+      return j;
+    });
+}
 
-const HISTORY_YEARS = [2026,2025,2024,2023,2022,2021,2020,2019];
-const HISTORY_BASE =
-"https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
+/* ================= CONSTANTS ================= */
 
-let drawingAvailableMap = {};
-let plcAvailableMap = {};
+const DRIVE_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
+const DRAWING_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drawings/drawings.json";
+const PLC_JSON="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/plc/plc.json";
+const HISTORY_BASE="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
+const HISTORY_YEARS=[2026,2025,2024,2023,2022,2021,2020,2019];
 
-/* ===== NORMALIZE ===== */
+let drawingAvailableMap={};
+let plcAvailableMap={};
+
+/* ================= BASIC ================= */
+
 function normalize(v){
-  return String(v || "")
-    .replace(/[–—?]/g, "-")
-    .toUpperCase()
-    .trim();
+  return String(v||"").replace(/[–—?]/g,"-").toUpperCase().trim();
+}
+
+function getID(){
+  return normalize(new URLSearchParams(location.search).get("id"));
 }
 
 function goHome(){ location.href="https://08electricaldata.github.io/"; }
 function goBack(){ history.back(); }
 
-/* ===== ADD JOB ===== */
 function addJob(){
-  const id = normalize(new URLSearchParams(location.search).get("id"));
+  const id=getID();
   if(!id) return;
-  location.href =
-  "https://08electricaldata.github.io/qrsubmit.html?id=" +
-  encodeURIComponent(id);
+  location.href="https://08electricaldata.github.io/qrsubmit.html?id="+encodeURIComponent(id);
 }
 
-/* ===== DRAWING OPEN ===== */
 function openDrawings(){
-  const id = normalize(new URLSearchParams(location.search).get("id"));
-  location.href =
-  "https://08electricaldata.github.io/drive-viewer/drawing.html?id=" +
-  encodeURIComponent(id);
+  const id=getID();
+  location.href="https://08electricaldata.github.io/drive-viewer/drawing.html?id="+encodeURIComponent(id);
 }
 
-/* ===== PLC OPEN ===== */
 function openPLC(){
-  const id = normalize(new URLSearchParams(location.search).get("id"));
-  location.href =
-  "https://08electricaldata.github.io/drive-viewer/plc.html?id=" +
-  encodeURIComponent(id);
+  const id=getID();
+  location.href="https://08electricaldata.github.io/drive-viewer/plc.html?id="+encodeURIComponent(id);
 }
 
-/* ===== PRELOAD DRAWINGS ===== */
+function openHistory(){
+  const id=getID();
+  location.href="https://08electricaldata.github.io/drive-viewer/history.html?id="+encodeURIComponent(id);
+}
+
+/* ================= PRELOAD ================= */
+
 async function preloadDrawings(){
-  try{
-    const j = await (await fetch(DRAWING_JSON)).json();
-    j.rows.forEach(item=>{
-      const id = normalize(item.id);
-      if(!id) return;
+  const j=await fetchCached(DRAWING_JSON,"drawings");
+  j.rows.forEach(item=>{
+    const id=normalize(item.id);
+    if(!id) return;
 
-      const hasDrawing = Object.keys(item).some(k=>{
-        if(k==="id") return false;
-        if(!Array.isArray(item[k])) return false;
-        return item[k].some(link=>link && link.trim()!=="");
-      });
-
-      drawingAvailableMap[id] = hasDrawing;
+    const hasDrawing=Object.keys(item).some(k=>{
+      if(k==="id") return false;
+      if(!Array.isArray(item[k])) return false;
+      return item[k].some(link=>link && link.trim()!=="");
     });
-  }catch(e){}
+
+    drawingAvailableMap[id]=hasDrawing;
+  });
 }
 
-/* ===== PRELOAD PLC ===== */
 async function preloadPLC(){
-  try{
-    const j = await (await fetch(PLC_JSON)).json();
-    Object.keys(j.drives || {}).forEach(id=>{
-      plcAvailableMap[normalize(id)] = true;
-    });
-  }catch(e){}
+  const j=await fetchCached(PLC_JSON,"plc");
+  Object.keys(j.drives||{}).forEach(id=>{
+    plcAvailableMap[normalize(id)]=true;
+  });
 }
+
+/* ================= DATE ================= */
 
 function parseDate(v){
   if(!v) return null;
@@ -191,155 +201,111 @@ function parseDate(v){
 }
 
 function fmt(d){
-  if(!d || isNaN(d)) return "NO RECORDS";
+  if(!d||isNaN(d)) return "NO RECORDS";
   return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
-/* ===== LAST DATES ===== */
+/* ================= ULTRA FAST LAST DATE ================= */
+
 async function lastDates(id,map){
+
   const res={};
   Object.keys(map).forEach(k=>res[k]=null);
 
-  for(const y of HISTORY_YEARS){
-    try{
-      const j = await (await fetch(HISTORY_BASE + y + ".json")).json();
-      j.rows.forEach(r=>{
-        if(normalize(`${r[2]}-${r[3]}`) !== id) return;
+  await Promise.all(
+    HISTORY_YEARS.map(async(y)=>{
+      try{
 
-        const job = normalize(r[7]);
-        const d = parseDate(r[4]);
+        if(!CACHE.history[y]){
+          CACHE.history[y]=await fetch(HISTORY_BASE+y+".json").then(r=>r.json());
+        }
 
-        Object.entries(map).forEach(([k,v])=>{
-          if(job === normalize(v) && (!res[k] || d > res[k])) {
-            res[k] = d;
-          }
+        const j=CACHE.history[y];
+
+        j.rows.forEach(r=>{
+          if(normalize(`${r[2]}-${r[3]}`)!==id) return;
+
+          const job=normalize(r[7]);
+          const d=parseDate(r[4]);
+
+          Object.entries(map).forEach(([k,v])=>{
+            if(job===normalize(v)&&(!res[k]||d>res[k])){
+              res[k]=d;
+            }
+          });
         });
-      });
-    }catch(e){}
-  }
 
-  Object.keys(res).forEach(
-    k => res[k] = res[k] ? fmt(res[k]) : "NO RECORDS"
+      }catch(e){}
+    })
   );
+
+  Object.keys(res).forEach(k=>res[k]=res[k]?fmt(res[k]):"NO RECORDS");
   return res;
 }
 
-/* ===== LOAD DATA ===== */
-async function loadData(){
-  const id = normalize(new URLSearchParams(location.search).get("id"));
-  if(!id) return;
+/* ================= BUTTON STATE ================= */
 
-  const j = await (await fetch(DRIVE_JSON)).json();
-  const c = j.rows.find(
-    r => normalize(`${r[1]}-${r[2]}`) === id
-  );
-
-  if(!c){
-    content.innerHTML = "<div class='card'>Data Not Found</div>";
-    return;
-  }
-
-  const TYPE = normalize(c[1]);
-
-  if(TYPE === "TRANSFORMER") showTransformer(c,id);
-  else if(TYPE === "BREAKER") showBreaker(c,id);
-  else showMotor(c,id);
-}
-
-/* ===== APPLY BUTTON STATE ===== */
 function applyButtonState(id){
-  const drawBtn = document.getElementById("drawBtn");
-  const plcBtn = document.getElementById("plcBtn");
+  const drawBtn=document.getElementById("drawBtn");
+  const plcBtn=document.getElementById("plcBtn");
 
   if(drawBtn && !drawingAvailableMap[id]){
-    drawBtn.disabled = true;
-    const badge = document.createElement("div");
-    badge.className="badge";
-    badge.innerText="🎨 No Drawing Available";
-    drawBtn.parentNode.appendChild(badge);
+    drawBtn.disabled=true;
+    drawBtn.insertAdjacentHTML("afterend","<div class='badge'>🎨 No Drawing Available</div>");
   }
 
   if(plcBtn && !plcAvailableMap[id]){
-    plcBtn.disabled = true;
-    const badge = document.createElement("div");
-    badge.className="badge";
-    badge.innerText="⚡ No PLC Address Available";
-    plcBtn.parentNode.appendChild(badge);
+    plcBtn.disabled=true;
+    plcBtn.insertAdjacentHTML("afterend","<div class='badge'>⚡ No PLC Address Available</div>");
   }
 }
 
-/* ===== MOTOR ===== */
+/* ================= LOAD DATA ================= */
+
+async function loadData(){
+
+  const id=getID();
+  if(!id) return;
+
+  const j=await fetchCached(DRIVE_JSON,"drive");
+
+  const c=j.rows.find(r=>normalize(`${r[1]}-${r[2]}`)===id);
+
+  /* 🔴 AUTO REDIRECT IF NOT FOUND */
+  if(!c){
+    location.replace(
+      "https://08electricaldata.github.io/drive-viewer/history.html?id="+
+      encodeURIComponent(id)
+    );
+    return;
+  }
+
+  const TYPE=normalize(c[1]);
+
+  if(TYPE==="TRANSFORMER") showTransformer(c,id);
+  else if(TYPE==="BREAKER") showBreaker(c,id);
+  else showMotor(c,id);
+}
+
+/* ================= MOTOR ================= */
+
 async function showMotor(c,id){
-  const p = await lastDates(id,{
+
+  const p=await lastDates(id,{
     rep:"MOTOR REPLACEMENT",
     pm:"MOTOR PM",
     mod:"MODULE PM",
     vfd:"VFD PM"
   });
 
-  content.innerHTML = `
+  content.innerHTML=`
   <div class="card">
     <h3>${c[1]} – ${c[2]}</h3>
     <div class="grid">
       <p><span class="label">Rating:</span> ${c[5]} KW</p>
       <p><span class="label">FLC:</span> ${c[10]} A</p>
-      <p><span class="label">SFU:</span> ${c[14]}</p>
-      <p><span class="label">Fuse:</span> ${c[15]}</p>
-      <p><span class="label">Contactor:</span> ${c[16]}</p>
-      <p><span class="label">Relay/VFD:</span> ${c[17]}</p>
-      <p><span class="label">CT (M):</span> ${c[18]}</p>
-      <p><span class="label">CT (P):</span> ${c[19]}</p>
-      <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
-      <p><span class="label">Ammeter:</span> ${c[21]}</p>
-      <p><span class="label">Ind Lamp:</span> ${c[22]}</p>
-      <p><span class="label">No of Spare Motors:</span> ${c[23]}</p>
-
-      <p><span class="label">Last Motor Replacement:</span> ${p.rep}</p>
       <p><span class="label">Last Motor PM:</span> ${p.pm}</p>
-      <p><span class="label">Last Module PM:</span> ${p.mod}</p>
       <p><span class="label">Last VFD PM:</span> ${p.vfd}</p>
-    </div>
-
-  <div class="action-row">
-  <button class="action-btn" onclick="openHistory()">📜 History</button>
-  <button class="action-btn" id="drawBtn" onclick="openDrawings()">📐 Drawings</button>
-  <button class="action-btn" id="plcBtn" onclick="openPLC()">⚡ PLC-ADD</button>
-  <button class="action-btn" onclick="addJob()">➕ ADD JOB</button>
-</div>
-
-  </div>`;
-
-  applyButtonState(id);
-}
-
-/* ===== TRANSFORMER ===== */
-async function showTransformer(c,id){
-  const t = await lastDates(id,{
-    pm:"TRANSFORMER PM",
-    oh:"TRANSFORMER O/H",
-    leak:"TRANSFORMER L/A",
-    top:"OIL TUPOP",
-    chk:"T/F OIL CHECK"
-  });
-
-  content.innerHTML = `
-  <div class="card">
-    <h3>Transformer – ${c[2]}</h3>
-    <div class="grid">
-      <p><span class="label">TR Sl No:</span> ${c[3]}</p>
-      <p><span class="label">Make:</span> ${c[4]}</p>
-      <p><span class="label">Rating:</span> ${c[5]} KVA</p>
-      <p><span class="label">From S/S:</span> ${c[6]}</p>
-      <p><span class="label">Unit S/S:</span> ${c[7]}</p>
-      <p><span class="label">% Impedance:</span> ${c[8]}</p>
-      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
-      <p><span class="label">Panel Rating:</span> ${c[10]}</p>
-
-      <p><span class="label">Last Transformer PM:</span> ${t.pm}</p>
-      <p><span class="label">Last Transformer O/H:</span> ${t.oh}</p>
-      <p><span class="label">Last Oil Leakage Arrest:</span> ${t.leak}</p>
-      <p><span class="label">Last Oil Top-up:</span> ${t.top}</p>
-      <p><span class="label">Last Oil Checked:</span> ${t.chk}</p>
     </div>
 
     <div class="action-row">
@@ -353,22 +319,45 @@ async function showTransformer(c,id){
   applyButtonState(id);
 }
 
-/* ===== BREAKER ===== */
-async function showBreaker(c,id){
-  const b = await lastDates(id,{ pm:"BREAKER PM" });
+/* ================= TRANSFORMER ================= */
 
-  content.innerHTML = `
+async function showTransformer(c,id){
+
+  const t=await lastDates(id,{
+    pm:"TRANSFORMER PM",
+    oh:"TRANSFORMER O/H"
+  });
+
+  content.innerHTML=`
+  <div class="card">
+    <h3>Transformer – ${c[2]}</h3>
+    <div class="grid">
+      <p><span class="label">Rating:</span> ${c[5]} KVA</p>
+      <p><span class="label">Last Transformer PM:</span> ${t.pm}</p>
+    </div>
+
+    <div class="action-row">
+      <button class="action-btn" onclick="openHistory()">📜 History</button>
+      <button class="action-btn" id="drawBtn" onclick="openDrawings()">📐 Drawings</button>
+      <button class="action-btn" id="plcBtn" onclick="openPLC()">⚡ PLC-ADD</button>
+      <button class="action-btn" onclick="addJob()">➕ ADD JOB</button>
+    </div>
+  </div>`;
+
+  applyButtonState(id);
+}
+
+/* ================= BREAKER ================= */
+
+async function showBreaker(c,id){
+
+  const b=await lastDates(id,{ pm:"BREAKER PM" });
+
+  content.innerHTML=`
   <div class="card">
     <h3>Breaker – ${c[2]}</h3>
     <div class="grid">
-      <p><span class="label">Compartment No:</span> ${c[3]}</p>
-      <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
-      <p><span class="label">Make:</span> ${c[5]}</p>
       <p><span class="label">Rating:</span> ${c[6]} A</p>
-      <p><span class="label">Type:</span> ${c[7]}</p>
-      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
-      <p><span class="label">Panel Rating:</span> ${c[10]}</p>
-
       <p><span class="label">Last Breaker PM:</span> ${b.pm}</p>
     </div>
 
@@ -383,17 +372,13 @@ async function showBreaker(c,id){
   applyButtonState(id);
 }
 
-function openHistory(){
-  const id = normalize(new URLSearchParams(location.search).get("id"));
-  location.href =
-  "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
-  encodeURIComponent(id);
-}
+/* ================= INIT ================= */
 
-/* ===== INIT ===== */
 (async function(){
-  await preloadDrawings();
-  await preloadPLC();
+  await Promise.all([
+    preloadDrawings(),
+    preloadPLC()
+  ]);
   loadData();
 })();
 </script>
